// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MOB-003: carte plein écran — position, barre de progression et estimation rendus en tokens SIGFA (RNTL snapshot) MOB-003: 5 états CANONIQUES rendus — loading skeleton ≠ empty (snapshot ×5): LiveTicketCard-active 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#12B76A",
      "flex": 1,
      "justifyContent": "center",
      "padding": 24,
    }
  }
  testID="live-ticket-called"
>
  <Text
    style={
      {
        "color": "#F5F7FA",
        "fontSize": 20,
        "fontWeight": "bold",
        "marginBottom": 12,
        "textAlign": "center",
      }
    }
  >
    Votre tour !
  </Text>
  <Text
    style={
      {
        "color": "#F5F7FA",
        "fontSize": 32,
        "fontWeight": "bold",
        "marginTop": 12,
        "textAlign": "center",
      }
    }
    testID="live-ticket-display-number"
  >
    A-001
  </Text>
</View>
`;

exports[`MOB-003: carte plein écran — position, barre de progression et estimation rendus en tokens SIGFA (RNTL snapshot) MOB-003: 5 états CANONIQUES rendus — loading skeleton ≠ empty (snapshot ×5): LiveTicketCard-empty 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "padding": 24,
    }
  }
  testID="live-ticket-empty"
>
  <Text
    style={
      {
        "color": "#475467",
        "fontSize": 15,
        "textAlign": "center",
      }
    }
  >
    Aucun ticket actif
  </Text>
</View>
`;

exports[`MOB-003: carte plein écran — position, barre de progression et estimation rendus en tokens SIGFA (RNTL snapshot) MOB-003: 5 états CANONIQUES rendus — loading skeleton ≠ empty (snapshot ×5): LiveTicketCard-error 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "padding": 24,
    }
  }
  testID="live-ticket-error"
>
  <Text
    style={
      {
        "color": "#F04438",
        "fontSize": 15,
        "marginBottom": 16,
        "textAlign": "center",
      }
    }
  >
    Adressez-vous à l'accueil
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#2E90FA",
        "borderRadius": 12,
        "justifyContent": "center",
        "minHeight": 44,
        "opacity": 1,
        "paddingHorizontal": 24,
        "paddingVertical": 12,
      }
    }
    testID="live-ticket-retry"
  >
    <Text
      style={
        {
          "color": "#F5F7FA",
          "fontSize": 15,
        }
      }
    >
      Réessayer
    </Text>
  </View>
</View>
`;

exports[`MOB-003: carte plein écran — position, barre de progression et estimation rendus en tokens SIGFA (RNTL snapshot) MOB-003: 5 états CANONIQUES rendus — loading skeleton ≠ empty (snapshot ×5): LiveTicketCard-idle 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "padding": 24,
    }
  }
  testID="live-ticket-idle"
>
  <Text
    style={
      {
        "color": "#2E90FA",
        "fontSize": 32,
        "fontWeight": "bold",
        "marginBottom": 24,
        "marginTop": 32,
        "textAlign": "center",
      }
    }
    testID="live-ticket-display-number"
  >
    A-001
  </Text>
  <Text
    style={
      {
        "color": "#475467",
        "fontSize": 15,
        "marginBottom": 8,
      }
    }
    testID="live-ticket-position"
  >
    Position dans la file
    : 
    <Text
      style={
        {
          "color": "#101828",
          "fontWeight": "bold",
        }
      }
    >
      1
    </Text>
  </Text>
  <Text
    style={
      {
        "color": "#475467",
        "fontSize": 15,
        "marginBottom": 24,
      }
    }
    testID="live-ticket-estimate"
  >
    Attente estimée
    : 
    <Text
      style={
        {
          "color": "#101828",
          "fontWeight": "bold",
        }
      }
    >
      5
       min
    </Text>
  </Text>
  <View
    style={
      {
        "marginTop": 16,
        "width": "100%",
      }
    }
    testID="live-ticket-progress"
  >
    <View
      style={
        {
          "backgroundColor": "rgba(46, 144, 250, 0.1)",
          "borderRadius": 999,
          "height": 8,
          "overflow": "hidden",
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#2E90FA",
            "borderRadius": 999,
            "height": "100%",
            "width": "90%",
          }
        }
      />
    </View>
    <Text
      style={
        {
          "color": "#475467",
          "fontSize": 13,
          "marginTop": 8,
          "textAlign": "center",
        }
      }
    >
      1 personne(s) devant vous
    </Text>
  </View>
</View>
`;

exports[`MOB-003: carte plein écran — position, barre de progression et estimation rendus en tokens SIGFA (RNTL snapshot) MOB-003: 5 états CANONIQUES rendus — loading skeleton ≠ empty (snapshot ×5): LiveTicketCard-loading 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "padding": 24,
    }
  }
  testID="live-ticket-skeleton"
>
  <View
    style={
      [
        {
          "backgroundColor": "#FAFBFC",
          "borderRadius": 12,
          "marginBottom": 12,
        },
        {
          "height": 40,
          "marginTop": 32,
          "width": "60%",
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "backgroundColor": "#FAFBFC",
          "borderRadius": 12,
          "marginBottom": 12,
        },
        {
          "height": 20,
          "width": "40%",
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "backgroundColor": "#FAFBFC",
          "borderRadius": 12,
          "marginBottom": 12,
        },
        {
          "height": 16,
          "width": "30%",
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "backgroundColor": "#FAFBFC",
          "borderRadius": 12,
          "marginBottom": 12,
        },
        {
          "height": 8,
          "marginTop": 24,
          "width": "80%",
        },
      ]
    }
  />
  <ActivityIndicator
    color="#2E90FA"
    size="small"
    style={
      {
        "marginTop": 24,
      }
    }
  />
</View>
`;
